Crash when closing virtual screen
Affected version
Running Wayland on Arch
Issue appears after update mutter from 47beta
to 47beta+r131+gbd8db3846
Bug summary
When stopping a virtual screen using the screencast API through DBUS, mutter crashes
Steps to reproduce
I wrote a reduced version of my script to trigger the crash.
It depends on
- PyGobject
- pydbus
What happened
When closing the application, mutter crashes and I get kicked back to the login screen
What did you expect to happen
Not crash
Relevant logs, screenshots, screencasts etc.
Stack trace of thread 181362:
#0 0x00007af8817cc486 n/a (/usr/lib/libmutter-15.so.0.0.0 (deleted) + 0x1cc486)
#1 0x00007af8819f46ce n/a (/usr/lib/mutter-15/libmutter-clutter-15.so.0.0.0 (deleted) + 0xa46ce)
#2 0x00007af88179b7cf n/a (/usr/lib/libmutter-15.so.0.0.0 (deleted) + 0x19b7cf)
#3 0x00007af881668489 n/a (/usr/lib/libmutter-15.so.0.0.0 (deleted) + 0x68489)
#4 0x00007af88168a900 n/a (/usr/lib/libmutter-15.so.0.0.0 (deleted) + 0x8a900)
#5 0x00007af88168afb2 n/a (/usr/lib/libmutter-15.so.0.0.0 (deleted) + 0x8afb2)
#6 0x00007af8817ad4fd n/a (/usr/lib/libmutter-15.so.0.0.0 (deleted) + 0x1ad4fd)
#7 0x00007af88168d2f9 n/a (/usr/lib/libmutter-15.so.0.0.0 (deleted) + 0x8d2f9)
#8 0x00007af8821386ac n/a (libglib-2.0.so.0 + 0x5a6ac)
#9 0x00007af88213b459 n/a (libglib-2.0.so.0 + 0x5d459)
#10 0x00007af88219e0d7 n/a (libglib-2.0.so.0 + 0xc00d7)
#11 0x00007af88213c187 g_main_loop_run (libglib-2.0.so.0 + 0x5e187)
#12 0x00007af8816ccefa n/a (/usr/lib/libmutter-15.so.0.0.0 (deleted) + 0xccefa)
#13 0x00007af880a92596 n/a (libffi.so.8 + 0x7596)
#14 0x00007af880a8f00e n/a (libffi.so.8 + 0x400e)
#15 0x00007af880a91bd3 ffi_call (libffi.so.8 + 0x6bd3)
#16 0x00007af881abb851 n/a (libgjs.so.0 + 0x4e851)
#17 0x00007af881abcc3f n/a (libgjs.so.0 + 0x4fc3f)
#18 0x00007af87fb60c14 n/a (libmozjs-128.so + 0x1560c14)
#19 0x00007af87fbf68f7 n/a (libmozjs-128.so + 0x15f68f7)
#20 0x00007af87fc93892 _ZN2JS4CallEP9JSContextNS_6HandleINS_5ValueEEES4_RKNS_16HandleValueArrayENS_13MutableHandleIS3_EE (libmozjs-128.so + 0x1693892)
#21 0x00007af881af03a4 n/a (libgjs.so.0 + 0x833a4)
#22 0x00007af881af86cf gjs_context_eval_module (libgjs.so.0 + 0x8b6cf)
#23 0x00007af881af8911 gjs_context_eval_module_file (libgjs.so.0 + 0x8b911)
#24 0x00005cce6347c586 n/a (/usr/bin/gnome-shell (deleted) + 0x2586)
#25 0x00007af881434e08 n/a (libc.so.6 + 0x25e08)
#26 0x00007af881434ecc __libc_start_main (libc.so.6 + 0x25ecc)
#27 0x00005cce6347c9f5 n/a (/usr/bin/gnome-shell (deleted) + 0x29f5)
Edited by Jasper van Bourgognie